--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -5,31 +5,29 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fontsource/rubik-mono-one": "^5.2.6",
     "@radix-ui/react-slot": "^1.2.3",
-    "@react-three/fiber": "^9.2.0",
-    "@react-three/postprocessing": "^3.0.4",
     "@tailwindcss/vite": "^4.1.11",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "framer-motion": "^12.23.1",
-    "lucide-react": "^0.525.0",
-    "ogl": "^1.0.11",
-    "postprocessing": "^6.37.6",
+    "embla-carousel-react": "^8.6.0",
+    "lucide-react": "^0.536.0",
+    "motion": "^12.23.12",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
+    "react-simple-typewriter": "^5.0.1",
     "tailwind-merge": "^3.3.1",
-    "tailwindcss": "^4.1.11",
-    "three": "^0.167.1"
+    "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
-    "@types/node": "^24.1.0",
+    "@types/node": "^24.2.0",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react": "^4.6.0",
@@ -37,7 +35,9 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
-    "tw-animate-css": "^1.3.5",
-    "vite": "^7.0.3"
+    "tw-animate-css": "^1.3.6",
+    "typescript": "~5.8.3",
+    "typescript-eslint": "^8.35.1",
+    "vite": "^7.0.4"
   }
 }
